<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFEFE"
        android:orientation="vertical"
        android:paddingTop="@dimen/top_pad">

        <TextView
            android:id="@+id/index1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_marg"
            android:layout_marginBottom="@dimen/top_marg"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/heading1"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#384AAA" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/post1"
                    android:layout_width="425dp"
                    android:layout_height="247dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/top_marg"
                    android:paddingTop="@dimen/top_pad"
                    app:srcCompat="@drawable/efsa" />

                <TextView
                    android:id="@+id/ptxt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/l_marg"
                    android:layout_marginTop="@dimen/top_marg"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="@dimen/top_pad"
                    android:text="@string/blog1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/read1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/l_marg"
                    android:layout_marginTop="@dimen/top_marg"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/read"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#120808" />

                <ImageView
                    android:id="@+id/post2"
                    android:layout_width="374dp"
                    android:layout_height="183dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:paddingTop="@dimen/top_pad"
                    app:srcCompat="@drawable/nvc" />

                <TextView
                    android:id="@+id/ptxt2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/l_marg"
                    android:layout_marginTop="@dimen/top_marg"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="@dimen/top_pad"
                    android:text="@string/blog2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#131010" />

                <Button
                    android:id="@+id/read2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/l_marg"
                    android:layout_marginTop="@dimen/top_marg"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/read"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#120808" />

                <ImageView
                    android:id="@+id/post3"
                    android:layout_width="405dp"
                    android:layout_height="208dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:paddingTop="@dimen/top_pad"
                    app:srcCompat="@drawable/afs" />

                <TextView
                    android:id="@+id/ptxt3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/l_marg"
                    android:layout_marginTop="@dimen/top_marg"
                    android:fontFamily="@font/roboto"
                    android:paddingTop="@dimen/top_pad"
                    android:text="@string/blog3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="#130F0F" />

                <Button
                    android:id="@+id/read3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/l_marg"
                    android:layout_marginTop="@dimen/top_marg"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/holo_green_dark"
                    android:text="@string/read"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#120808" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>