<layout

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/meter"
            android:layout_width="match_parent"
            android:layout_height="197dp"
            android:background="#FFFFFF"
            app:srcCompat="@drawable/r" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="#F3F1F6"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/b1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#0C0909"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/rbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:theme="@style/RatingBar" />


                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#F3F1F6">

                    <TableRow android:gravity="center">

                        <TextView
                            android:id="@+id/rtxt"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:gravity="center_vertical"
                            android:text="@string/rating"
                            android:textColor="#0C0909"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/num"
                            android:layout_width="36dp"
                            android:layout_height="45dp"
                            android:gravity="center"
                            android:text="0.0"
                            android:textColor="#050405"
                            android:textColorHint="#FFFFFF"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/fix"
                            android:layout_width="53dp"
                            android:layout_height="45dp"
                            android:gravity="center_vertical"
                            android:text=" / 5.0"
                            android:textColor="#0C0909"
                            android:textSize="18sp" />

                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="#4CAF50"
                    android:text="@string/save"
                    android:textColor="#050505" />

                <TextView
                    android:id="@+id/txt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="#F3F1F6"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/b2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#0C0909"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/rbar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:theme="@style/RatingBar" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="#F3F1F6">

                    <TableRow android:gravity="center">

                        <TextView
                            android:id="@+id/rtxt2"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:gravity="center_vertical"
                            android:text="@string/rating"
                            android:textColor="#0C0909"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/num2"
                            android:layout_width="wrap_content"
                            android:layout_height="45dp"
                            android:gravity="center"
                            android:text="  0.0"
                            android:textColor="#050405"
                            android:textColorHint="#FFFFFF"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/fix2"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:gravity="center_vertical"
                            android:text=" / 5.0"
                            android:textColor="#0C0909"
                            android:textSize="18sp" />

                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="#4CAF50"
                    android:text="@string/save"
                    android:textColor="#0C0C0C" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>